--- a/RaulLinoApp/package.json
+++ b/RaulLinoApp/package.json
@@ -27,5 +27,9 @@
         "GPS_REQUIRED": "true"
       }
     }
+  },
+  "dependencies": {
+    "aframe-osm-3d": "^0.5.2",
+    "cordova": "^11.0.0"
   }
 }
