--- a/RaulLinoApp/package.json
+++ b/RaulLinoApp/package.json
@@ -13,24 +13,29 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^10.1.1",
+    "cordova-android": "^10.1.2",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-camera": "github:apache/cordova-plugin-camera",
     "cordova-plugin-geolocation": "^4.1.0"
   },
   "cordova": {
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
-      }
+      },
+      "cordova-plugin-camera": {},
+      "cordova-android-support-gradle-release": {}
     }
   },
   "dependencies": {
     "aframe-osm-3d": "^0.5.2",
     "cordova": "^11.0.0",
+    "cordova-plugin-arjs": "^0.0.1",
     "gradle": "^1.2.4"
   }
 }
